--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   jekyll:
+    name: build and deploy jekyll
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
@@ -33,3 +34,16 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         target_branch: 'gh-pages'
+  action-slack:
+    name: send slack notif
+    runs-on: ubuntu-16.04
+    steps:
+      - uses: 8398a7/action-slack@v3.8.3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+          
+          
+    
